// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`alarm-general-list Renders \`alarm-general-list\` with alarms 1`] = `
<div>
  <div
    class="v-subheader theme--light"
  >
    General
  </div>
  <div
    class="v-data-table theme--light"
  >
    <div
      class="v-data-table__wrapper"
    >
      <transition-group-stub
        class="v-data-table__expanded__col"
        colspan="4"
        tag="td"
      />
      <transition-group-stub
        class="v-data-table__expanded__col"
        colspan="4"
        tag="td"
      />
      <transition-group-stub
        class="v-data-table__expanded__col"
        colspan="4"
        tag="td"
      />
      <transition-group-stub
        class="v-data-table__expanded__col"
        colspan="4"
        tag="td"
      />
      <table>
        <colgroup>
          <col
            class=""
          />
          <col
            class=""
          />
          <col
            class=""
          />
          <col
            class=""
          />
        </colgroup>
        <thead
          class="v-data-table-header"
        >
          <tr>
            <th
              aria-label="Author"
              class="text-start"
              role="columnheader"
              scope="col"
            >
              <span>
                Author
              </span>
            </th>
            <th
              aria-label="Connector"
              class="text-start"
              role="columnheader"
              scope="col"
            >
              <span>
                Connector
              </span>
            </th>
            <th
              aria-label="Component"
              class="text-start"
              role="columnheader"
              scope="col"
            >
              <span>
                Component
              </span>
            </th>
            <th
              aria-label="Resource"
              class="text-start"
              role="columnheader"
              scope="col"
            >
              <span>
                Resource
              </span>
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td
              class="text-left"
            >
          author-0
            </td>
            <td
              class="text-left"
            >
          connector-0
            </td>
            <td
              class="text-left"
            >
          component-0
            </td>
            <td
              class="text-left"
            >
          resource-0
            </td>
          </tr>
          <tr
            class="v-data-table__expanded v-data-table__expanded__row"
          />
          <tr>
            <td
              class="text-left"
            >
          author-1
            </td>
            <td
              class="text-left"
            >
          connector-1
            </td>
            <td
              class="text-left"
            >
          component-1
            </td>
            <td
              class="text-left"
            >
          resource-1
            </td>
          </tr>
          <tr
            class="v-data-table__expanded v-data-table__expanded__row"
          />
          <tr>
            <td
              class="text-left"
            >
          author-2
            </td>
            <td
              class="text-left"
            >
          connector-2
            </td>
            <td
              class="text-left"
            >
          component-2
            </td>
            <td
              class="text-left"
            >
          resource-2
            </td>
          </tr>
          <tr
            class="v-data-table__expanded v-data-table__expanded__row"
          />
          <tr>
            <td
              class="text-left"
            >
          author-3
            </td>
            <td
              class="text-left"
            >
          connector-3
            </td>
            <td
              class="text-left"
            >
          component-3
            </td>
            <td
              class="text-left"
            >
          resource-3
            </td>
          </tr>
          <tr
            class="v-data-table__expanded v-data-table__expanded__row"
          />
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`alarm-general-list Renders \`alarm-general-list\` with empty items 1`] = `
<div>
  <div
    class="v-subheader theme--light"
  >
    General
  </div>
  <div
    class="v-data-table theme--light"
  >
    <div
      class="v-data-table__wrapper"
    >
      <table>
        <colgroup>
          <col
            class=""
          />
          <col
            class=""
          />
          <col
            class=""
          />
          <col
            class=""
          />
        </colgroup>
        <thead
          class="v-data-table-header"
        >
          <tr>
            <th
              aria-label="Author"
              class="text-start"
              role="columnheader"
              scope="col"
            >
              <span>
                Author
              </span>
            </th>
            <th
              aria-label="Connector"
              class="text-start"
              role="columnheader"
              scope="col"
            >
              <span>
                Connector
              </span>
            </th>
            <th
              aria-label="Component"
              class="text-start"
              role="columnheader"
              scope="col"
            >
              <span>
                Component
              </span>
            </th>
            <th
              aria-label="Resource"
              class="text-start"
              role="columnheader"
              scope="col"
            >
              <span>
                Resource
              </span>
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            class="v-data-table__empty-wrapper"
          >
            <td
              colspan="4"
            >
              No data available
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;
